; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_tps65217_charger.c_tps65217_charger_get_property.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_tps65217_charger.c_tps65217_charger_get_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.power_supply = type { i32 }
%union.power_supply_propval = type { i32 }
%struct.tps65217_charger = type { i32 }

@POWER_SUPPLY_PROP_ONLINE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.power_supply*, i32, %union.power_supply_propval*)* @tps65217_charger_get_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tps65217_charger_get_property(%struct.power_supply* %0, i32 %1, %union.power_supply_propval* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.power_supply*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %union.power_supply_propval*, align 8
  %8 = alloca %struct.tps65217_charger*, align 8
  store %struct.power_supply* %0, %struct.power_supply** %5, align 8
  store i32 %1, i32* %6, align 4
  store %union.power_supply_propval* %2, %union.power_supply_propval** %7, align 8
  %9 = load %struct.power_supply*, %struct.power_supply** %5, align 8
  %10 = call %struct.tps65217_charger* @power_supply_get_drvdata(%struct.power_supply* %9)
  store %struct.tps65217_charger* %10, %struct.tps65217_charger** %8, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @POWER_SUPPLY_PROP_ONLINE, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %20

14:                                               ; preds = %3
  %15 = load %struct.tps65217_charger*, %struct.tps65217_charger** %8, align 8
  %16 = getelementptr inbounds %struct.tps65217_charger, %struct.tps65217_charger* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %union.power_supply_propval*, %union.power_supply_propval** %7, align 8
  %19 = bitcast %union.power_supply_propval* %18 to i32*
  store i32 %17, i32* %19, align 4
  store i32 0, i32* %4, align 4
  br label %23

20:                                               ; preds = %3
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %4, align 4
  br label %23

23:                                               ; preds = %20, %14
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local %struct.tps65217_charger* @power_supply_get_drvdata(%struct.power_supply*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
